#+title: tempel.el - Changelog
#+author: Daniel Mendler
#+language: en

* Development

- Require Emacs 28.1.
- Optional named field argument for custom user element hooks.

* Version 1.2 (2024-07-24)

- Bugfixes.
- Bump Compat dependency to Compat 30.

* Version 1.1 (2024-02-16)

- Respect ~major-mode-remap-alist~ on Emacs 29 when looking up templates.

* Version 1.0 (2023-12-01)

- Bugfix: Fix =no-self-insert= of =tempel-abbrev-mode=.
- Bugfix: Only replace default field if not modifying a region.

* Version 0.8 (2023-07-02)

- Ensure that modification hooks are never inhibited during field modification,
  which is needed for lsp-mode in order to keep the server synchronized.

* Version 0.7 (2023-02-15)

- Start of changelog.